# wp-lose-weight

./: AGENTS.md  pyproject.toml  requirements.txt
wploseweight/: __init__.py  __main__.py  cli.py
wploseweight/client/: ftp_client.py
wploseweight/command/: abstract_command.py  download_project_command.py  optimize_project_command.py  upload_project_command.py
wploseweight/container/: default_container.py
wploseweight/mapper/service/: path_mapper.py
wploseweight/model/service/: ftp_project_options.py  local_optimization_options.py  optimization_result.py
wploseweight/service/: uploads_optimization_service.py
